tests/e2e/mutation_any_invalid2.story
a = [] as List[any]
b = a[0]
c = b.substring2(foo:2)
